added get todos
