# src/models/todo.ts
@@ -1,0 +1,6 @@
+export interface Todo {
+    task: string,
+    who: string,
+    dueDate: string,
+    done: boolean
+}
